--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,11 @@ ul {
 img {
     width: 100%;
     height: 100%;
-    max-height: 50vh;
+    max-height: 40vh;
     padding: 20px;
+}
+p {
+    line-height: 1.5;
 }
 li {
     list-style-type: none;
@@ -74,7 +77,6 @@ header {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-   justify-content: space-around
 }
 .header__description {
     display: flex;
@@ -108,6 +110,7 @@ button:active {
 }
 .header__img--wrapper {
     padding: 20px;
+    z-index: 2;
 }
 .container {
     padding: 56px 0;
@@ -118,6 +121,40 @@ button:active {
     margin: 0 auto;
 }
 /* HIGHLIGHT */
+
+/* #highlights::before {
+   
+} */
+#highlights {
+    position: relative;
+}
+#highlights::before {
+    content: "";
+   background: url('assets/wave.svg');
+   position: absolute;
+   width: 101vw;
+   height: 12vw;
+   top: 1px;
+   left: 0;
+   z-index: 1;
+   background-size: cover;
+   background-repeat: no-repeat;
+   transform: translateY(-100%);
+}
+#highlights::after {
+    content: "";
+   background: url('assets/wave.svg');
+   position: absolute;
+   width: 101vw;
+   height: 12vw;
+   bottom: 1px;
+   left: 0;
+   z-index: 1;
+   background-size: cover;
+   background-repeat: no-repeat;
+   transform: translateY(100%) rotate(180deg);
+}
+
 .highlight__wrapper {
     display: flex;
 }
@@ -132,6 +169,7 @@ button:active {
 }
 .highlight__para {
     text-align: center;
+    max-width: 280px;
 }
 .highlight__img {
     border: 2px solid #7342d65d;
@@ -148,4 +186,9 @@ button:active {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+}
+
+/* FEATURES */
+#features {
+    background-color: rgba(115, 66, 214, 0.1);;
 }
