--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
 nav {
     height: 80px;
     display: flex;
@@ -128,30 +132,24 @@ button:active {
 #highlights {
     position: relative;
 }
-#highlights::before {
-    content: "";
-   background: url('assets/wave.svg');
-   position: absolute;
-   width: 101vw;
-   height: 12vw;
-   top: 1px;
-   left: 0;
-   z-index: 1;
-   background-size: cover;
-   background-repeat: no-repeat;
-   transform: translateY(-100%);
-}
+#highlights::before,
 #highlights::after {
     content: "";
    background: url('assets/wave.svg');
    position: absolute;
    width: 101vw;
    height: 12vw;
-   bottom: 1px;
    left: 0;
    z-index: 1;
    background-size: cover;
    background-repeat: no-repeat;
+}
+#highlights::before {
+   top: 1px;
+   transform: translateY(-100%);
+}
+#highlights::after {
+   bottom: 1px;
    transform: translateY(100%) rotate(180deg);
 }
 
@@ -190,5 +188,53 @@ button:active {
 
 /* FEATURES */
 #features {
+    padding-top: 8vw;
     background-color: rgba(115, 66, 214, 0.1);;
+}
+.books {
+    display: flex;
+    flex-wrap: wrap;
+}
+.book {
+    width: 25%;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.book__img {
+    max-height: 360px;
+    transition: all 300ms ease;
+    cursor: not-allowed;
+}
+.book__img--wrapper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+.book__title:hover {
+    text-decoration: underline;
+    cursor:not-allowed;
+}
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    opacity: .40;
+}
+/* RECENTS */
+.books__recent {
+    display: flex;
+    flex-wrap: wrap;
 }
