--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ li {
     font-size: 40px;
     text-align: center;
     color: #7342d6;
+    display: none;
 }
 .menu__backdrop {
     position: absolute;
@@ -91,6 +92,18 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+.menu--open .menu__backdrop{
+    display: flex;
+    visibility: visible;
+    opacity: 1;
+}
+.menu--open {
+    max-height: 100vh;
+    overflow: hidden;
 }
 .menu__list {
     padding: 32px 0;
@@ -208,6 +221,7 @@ button:active {
 
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
@@ -216,7 +230,7 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    
 }
 .highlight__para {
     text-align: center;
@@ -237,6 +251,7 @@ button:active {
 .highlight__subtitle {
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
 }
 
 /* FEATURES */
@@ -311,4 +326,39 @@ footer {
 }
 .footer__link {
     padding: 0 8px;
+}
+
+/* Small Phones, Tablets, Large smartphones */
+@media(max-width: 768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+    h1 {
+        font-size: 40px;
+    }
+    h2 {
+        font-size: 26px;
+    }
+    button {
+        font-size: 18px;
+    }
+    .book {
+        width: 50%;
+    }
+}
+
+/* Small Phones, Large Smartphones */
+@media (max-width: 550px) {
+    .nav__link {
+        display: none;
+    }
+    .btn__menu {
+        display: block;
+    }
+    .highlight {
+        width: 100%;
+    }
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
 }
